added JS injection, and display raw text on UI

--- a/src/main/resources/fxml/OverlayUI.fxml
+++ b/src/main/resources/fxml/OverlayUI.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.web.WebView?>
 <?import javafx.scene.control.Button?>
@@ -17,5 +19,17 @@
 
         <!-- WebView for Economic Calendar -->
         <WebView fx:id="webView" style="-fx-background-color: rgba(0, 0, 0, 0.2);"/>
+
+        <!-- TableView to display parsed data -->
+        <TableView fx:id="tableView">
+            <columns>
+                <TableColumn fx:id="timeColumn" text="Time" />
+                <TableColumn fx:id="currencyColumn" text="Currency" />
+                <TableColumn fx:id="eventColumn" text="Event" />
+                <TableColumn fx:id="actualColumn" text="Actual" />
+                <TableColumn fx:id="forecastColumn" text="Forecast" />
+                <TableColumn fx:id="previousColumn" text="Previous" />
+            </columns>
+        </TableView>
     </VBox>
 </AnchorPane>
